--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -56,7 +56,7 @@ hyperlink==21.0.0
 idna==2.10  # pyup: ignore (conflicts with moto on master)
 imagesize==1.4.1
 importlib-metadata==7.0.0
-importlib-resources==6.1.1
+importlib-resources==6.1.1;  python_version < "3.9"
 incremental==22.10.0
 ipaddress==1.0.23
 isort==4.3.21   # pyup: ignore (until https://github.com/PyCQA/pylint/pull/3725 is merged)
