github: Disable fail-fast setting for Windows checks too
This allows to see clear impact of a failure instead of guessing which
checks would have succeeded or failed if they were not canceled.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,7 @@ jobs:
     runs-on: windows-2019
 
     strategy:
+      fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
 
