--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,11 @@
 [tool.ruff]
 line-length = 100
 target-version = "py38"
+select = ["I"]
+
+[tool.ruff.lint.isort]
+force-single-line = true
+known-first-party = ["buildbot", "buildbot_worker"]
 
 [tool.ruff.format]
 preview = true # needed for quote-style
