fixup! Update Makefile to handle Windows paths and Python (Issue #6885)

--- a/newsfragments/makefile-for-windows.bugfix
+++ b/newsfragments/makefile-for-windows.bugfix
@@ -1,1 +1,1 @@
-Update Makefile to handle Windows paths and Python. Also modified the webpack config file to handle Windows paths.
+Update `Makefile` to handle Windows paths and Python. Also modified the webpack config file to handle Windows paths.
