--- a/.github/workflows/cidb.yml
+++ b/.github/workflows/cidb.yml
@@ -80,9 +80,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements-ci.txt', 'requirements-cidb.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt', 'requirements-cidb.txt') }}
           restore-keys: ${{ runner.os }}-pip-
 
       - run: pip install -U pip wheel
-      - run: pip install -r requirements-ci.txt -r requirements-cidb.txt
+      - run: pip install -r requirements.txt -r requirements-cidb.txt
       - run: $(which trial) --reporter=text --rterrors buildbot.test buildbot_worker.test
