--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ install:
   - "python -c \"import sys; print(sys.executable)\""
   - "python -V -V"
   - "python -m pip install -U pip setuptools wheel"
-  - "python -m pip install -r requirements-ci.txt"
+  - "python -m pip install -r requirements.txt"
   - "python -m pip list"
   # Check that pywin32 is properly installed
   - "python -c \"import win32api\""
