--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -16,6 +16,8 @@ env:
   - NUM_CPU=700m
   - MEMORY_SIZE=1G
   - CHROME_BIN=/usr/bin/google-chrome
+  # Needed to ignore specific warns, otherwise, it'll warn a generic message
+  - SQLALCHEMY_WARN_20=1
   matrix: []
 matrix:
   fast_finish: true
