--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,10 @@ jobs:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
+    env:
+      # Needed to ignore specific warns, otherwise, it'll warn a generic message
+      SQLALCHEMY_WARN_20: 1
+
     steps:
       - uses: "actions/checkout@v2"
       - uses: "actions/setup-python@v2"
