--- a/.github/workflows/cidb.yml
+++ b/.github/workflows/cidb.yml
@@ -49,6 +49,8 @@ jobs:
 
     env:
       BUILDBOT_TEST_DB_URL: ${{ matrix.connection }}
+      # Needed to ignore specific warns, otherwise, it'll warn a generic message
+      SQLALCHEMY_WARN_20: 1
 
     services:
       database:
