smokes: improve pendingbuildrequests test
Add a new Builder neverruntests assigned to an offline worker
to be sure we can see the build request before it's claimed.

--- a/smokes-react/master.cfg
+++ b/smokes-react/master.cfg
@@ -9,7 +9,10 @@ c = BuildmasterConfig = {}
 
 ####### WORKERS
 
-c['workers'] = [worker.Worker("example-worker", "pass")]
+c['workers'] = [
+  worker.Worker("example-worker", "pass"),
+  worker.Worker("shutdown-worker", "pass"),
+]
 c['protocols'] = {'pb': {'port': 9989}}
 
 
@@ -19,7 +22,7 @@ c['change_source'] = []
 c['change_source'].append(changes.GitPoller(
         'https://github.com/buildbot/hello-world.git',  # the buildbot clone of pyflakes
         workdir='gitpoller-workdir', branch='master',
-        pollinterval=300))
+        pollInterval=300))
 
 ####### SCHEDULERS
 
@@ -60,6 +63,10 @@ c['schedulers'].append(schedulers.ForceScheduler(
             label="Name of the Build release.",
             default="")]))
 
+c['schedulers'].append(schedulers.ForceScheduler(
+                            name="force-neverruntests",
+                            builderNames=["neverruntests"]))
+
 ####### BUILDERS
 
 factory = util.BuildFactory()
@@ -87,6 +94,11 @@ c['builders'].append(
                        tags=['slow', 'runt'],
                        workernames=["example-worker"],
                        factory=slowfactory))
+c['builders'].append(
+    util.BuilderConfig(name="neverruntests",
+                       tags=['slow', 'runt', 'never'],
+                       workernames=["shutdown-worker"],
+                       factory=factory))
 
 for i in range(NUM_BUILDERS):
     c['builders'].append(
