--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -109,8 +109,7 @@ setuptools-trial==0.6.0
 singledispatch==4.1.0
 six==1.16.0
 snowballstemmer==2.2.0
-# Buildbot supports only sqlalchemy >= 1.3.0, < 1.5
-SQLAlchemy==1.4.52  # pyup: ignore
+SQLAlchemy==2.0.30
 sqlparse==0.5.0
 termcolor==2.4.0
 testtools==2.7.1
