--- a/.github/workflows/cidb.yml
+++ b/.github/workflows/cidb.yml
@@ -69,21 +69,21 @@ jobs:
         options: --health-cmd "${{ matrix.check }}" --health-interval 10s --health-timeout 5s --health-retries 10
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - run: sudo apt-get install aspell aspell-en enchant iamerican ispell
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8
-
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements-ci.txt', 'requirements-cidb.txt') }}
-          restore-keys: ${{ runner.os }}-pip-
+          cache: 'pip'
+          cache-dependency-path: |
+            requirements-ci.txt
+            requirements-cidb.txt
+            master/setup.py
+            worker/setup.py
+            pkg/setup.py
 
       - run: pip install -U pip wheel
       - run: pip install -r requirements-ci.txt -r requirements-cidb.txt
