--- a/smokes-react/master.cfg
+++ b/smokes-react/master.cfg
@@ -1,6 +1,8 @@
 # -*- python -*-
 # ex: set filetype=python:
 
+import os
+
 from buildbot.plugins import *
 
 NUM_BUILDERS = 2
@@ -126,6 +128,9 @@ c['www'] = {
     },
     "ui_default_config": {'Builders.buildFetchLimit': 201}
 }
+
+if "BB_TEST_OLD_REACT_PATH" in os.environ:
+    c["www"]["plugins"]["base_react"] = {}
 
 c['buildbotNetUsageData'] = None
 
