--- a/www/grid_view/package.json
+++ b/www/grid_view/package.json
@@ -68,7 +68,7 @@
     ]
   },
   "peerDependencies": {
-    "axios": "^0.27.2",
+    "axios": "0.27.2",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "moment": "^2.29.4",
@@ -79,8 +79,8 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "axios": "^0.27.2",
-    "axios-mock-adapter": "^1.21.1",
+    "axios": "0.27.2",
+    "axios-mock-adapter": "~1.21.1",
     "babel-preset-react-app": "^10.0.0",
     "buildbot-data-js": "link:../data-module",
     "buildbot-plugin-support": "link:../plugin_support",
