--- a/www/react-base/package.json
+++ b/www/react-base/package.json
@@ -17,7 +17,7 @@
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "axios": "^0.27.2",
+    "axios": "0.27.2",
     "babel-jest": "^26.6.0",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^4.6.2",
@@ -150,7 +150,7 @@
     "@types/jquery": "^3.5.16",
     "@types/react-test-renderer": "^18.0.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "axios-mock-adapter": "^1.21.1",
+    "axios-mock-adapter": "~1.21.1",
     "buffer": "^5.5.0",
     "less": "^3.0.0",
     "process": "^0.11.10",
