--- a/www/base/package.json
+++ b/www/base/package.json
@@ -16,7 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "axios": "0.27.2",
-    "babel-jest": "^26.6.0",
+    "babel-jest": "26.6.0",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^4.6.2",
     "buildbot-data-js": "link:../data-module",
