--- a/www/ui/package.json
+++ b/www/ui/package.json
@@ -104,9 +104,9 @@
     "react-router-dom": "^6.3.0",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.56.0",
-    "vite": "^4.5.3",
+    "vite": "~5.3.1",
     "vite-plugin-dts": "^2.1.0",
-    "vite-plugin-static-copy": "^0.13.1"
+    "vite-plugin-static-copy": "~1.0.5"
   },
   "license": "GPL-2.0",
   "dependencies": {
