www: Use vitest as test runner
jest uses a parallel build pipeline which doubles the amount of
maintenance that needs to be done in that area.

--- a/www/plugin_support/package.json
+++ b/www/plugin_support/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Utilities for Buildbot plugins",
   "author": "Povilas Kanapickas <povilas@radix.lt>",
-  "main": "dist/buildbot-plugin-support.umd.js",
-  "module": "dist/buildbot-plugin-support.mjs",
+  "module": "dist/buildbot-plugin-support.js",
+  "exports": "src/index.ts",
+  "type": "module",
   "types": "dist/index.d.ts",
   "scripts": {
     "start": "vite",
