--- a/www/base/package.json
+++ b/www/base/package.json
@@ -2,12 +2,9 @@
   "name": "base",
   "version": "0.1.0",
   "private": true,
-  "main": "src/index.tsx",
   "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
-    "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-copy-to-clipboard": "^5.0.4",
@@ -18,7 +15,6 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "axios": "0.27.2",
-    "babel-jest": "26.6.0",
     "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^4.6.2",
     "buildbot-data-js": "link:../data-module",
@@ -28,15 +24,10 @@
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
-    "jest": "26.6.0",
-    "jest-circus": "26.6.0",
-    "jest-resolve": "26.6.0",
-    "jest-watch-typeahead": "0.6.1",
     "jquery": "^3.6.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
@@ -68,8 +59,8 @@
     "start": "vite",
     "build": "vite build",
     "build-dev": "vite build -m development",
-    "test": "jest",
-    "test-watch": "jest --watchAll"
+    "test": "vitest run",
+    "test-watch": "vitest --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -88,70 +79,13 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testRunner": "./node_modules/jest-circus/runner.js",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.cjs",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.cjs",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.cjs"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleDirectories": [
-      "<rootDir>/node_modules",
-      "node_modules"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
     "@types/react-test-renderer": "^18.0.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "~4.3.1",
     "axios-mock-adapter": "~1.21.1",
     "buffer": "^5.5.0",
+    "jsdom": "^24.1.0",
     "less": "^3.0.0",
     "process": "^0.11.10",
     "react-test-renderer": "^18.2.0",
@@ -159,6 +93,8 @@
     "sass": "^1.56.0",
     "vite": "~5.3.1",
     "vite-plugin-checker": "~0.6.4",
-    "vite-plugin-static-copy": "~1.0.5"
+    "vite-plugin-node-polyfills": "~0.17.0",
+    "vite-plugin-static-copy": "~1.0.5",
+    "vitest": "~1.6.0"
   }
 }
