--- a/www/data-module/package.json
+++ b/www/data-module/package.json
@@ -4,62 +4,20 @@
   "description": "Buildbot React data module and utilities",
   "author": "Povilas Kanapickas <povilas@radix.lt>",
   "module": "dist/buildbot-data-js.js",
-  "main": "dist/buildbot-data-js.cjs",
+  "exports": "src/main.ts",
   "type": "module",
   "types": "dist/main.d.ts",
   "scripts": {
     "start": "vite",
     "build": "vite build",
     "build-dev": "vite build -m development",
-    "test": "jest",
-    "test-watch": "jest --watchAll"
+    "test": "vitest run",
+    "test-watch": "vitest --watch"
   },
   "eslintConfig": {
     "extends": [
       "react-app"
     ]
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testRunner": "./node_modules/jest-circus/runner.js",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.cjs",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.cjs",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.cjs"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "ts",
-      "tsx",
-      "json",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
   },
   "babel": {
     "presets": [
@@ -73,21 +31,19 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.32",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "~4.3.1",
     "axios": "0.27.2",
     "axios-mock-adapter": "~1.21.1",
     "babel-preset-react-app": "^10.0.0",
-    "jest": "26.6.0",
-    "jest-circus": "26.6.0",
-    "jest-watch-typeahead": "0.6.1",
+    "jsdom": "^24.1.0",
     "mobx": "^6.6.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-app-polyfill": "^2.0.0",
     "vite": "~5.3.1",
-    "vite-plugin-dts": "^2.1.0"
+    "vite-plugin-dts": "^2.1.0",
+    "vitest": "~1.6.0"
   },
   "license": "MPL-2.0"
 }
