smokes: use old react_ plugins in testing
They are alias to the non-react named ones,
this way we test both the code and the correct setup of package aliases.

--- a/smokes-react/master.cfg
+++ b/smokes-react/master.cfg
@@ -122,15 +122,13 @@ c['www'] = {
     "port": 8011,
     "change_hook_dialects": {'base': True},
     "plugins": {
-        "waterfall_view": {},
-        "console_view": {},
-        "grid_view": {},
+        "base_react": {},
+        "react_waterfall_view": {},
+        "react_console_view": {},
+        "react_grid_view": {},
     },
     "ui_default_config": {'Builders.buildFetchLimit': 201}
 }
-
-if "BB_TEST_OLD_REACT_PATH" in os.environ:
-    c["www"]["plugins"]["base_react"] = {}
 
 c['buildbotNetUsageData'] = None
 
