--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -3,6 +3,7 @@
 -e pkg
 # we install buildbot www from pypi to avoid the slow nodejs build at each test
 buildbot-www==4.0.0
+buildbot-www-react==4.0.0
 
 autobahn==23.6.2;  python_version >= "3.9"
 autobahn==22.7.1;  python_version < "3.9" # pyup: ignore
