smokes-react: Add an e2e test to prevent regression on #7790

--- a/smokes-react/master.cfg
+++ b/smokes-react/master.cfg
@@ -124,7 +124,10 @@ c['www'] = {
         "console_view": {},
         "grid_view": {},
     },
-    "ui_default_config": {'Builders.buildFetchLimit': 201}
+    "ui_default_config": {
+        'Builders.buildFetchLimit': 201,
+        'Waterfall.scaling_waterfall': 1.234
+    }
 }
 
 c['buildbotNetUsageData'] = None
