--- a/.bbtravis.yml
+++ b/.bbtravis.yml
@@ -89,7 +89,7 @@ install:
       else
         python$PYTHON -m venv /tmp/bbvenv
       fi
-  - /tmp/bbvenv/bin/pip install -U pip wheel
+  - /tmp/bbvenv/bin/pip install -r requirements-pip.txt
   - condition: TESTS not in ("dev_virtualenv", "smokes", "e2e_react_whl", "e2e_react_tgz", "trial_worker")
     cmd: /tmp/bbvenv/bin/pip install -r requirements-ci.txt
   # On python 3.12 workaround done in dcbc28d1431e1aae892f7fdc0e266253365bc11e is no longer enough.
