--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             pip install -r requirements-pip.txt
             pip install -r requirements-ci.txt
             pip install -r requirements-cidocs.txt
-            pip install pyinstaller
+            pip install pyinstaller==6.9.0
 
       - save_cache:
           paths:
