requirements: Install master[test,tls]

--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -1,16 +1,11 @@
--e master
+-e master[test,tls]
 -e worker
 -e pkg
 # we install buildbot www from pypi to avoid the slow nodejs build at each test
 buildbot-www==4.0.1
 
-autobahn==23.6.2;  python_version >= "3.9"
-autobahn==22.7.1;  python_version < "3.9" # pyup: ignore
-boto3==1.34.144
-msgpack==1.0.8
 Markdown==3.6
 pylint==3.2.5
-ruff==0.5.2
 mypy==1.10.1
 mypy-zope==1.0.5
 
@@ -26,10 +21,13 @@ appdirs==1.4.4
 asn1crypto==1.5.1
 astroid==3.2.3
 attrs==23.2.0
+autobahn==23.6.2;  python_version >= "3.9"
+autobahn==22.7.1;  python_version < "3.9" # pyup: ignore
 Automat==22.10.0
 Babel==2.15.0
 backports.functools-lru-cache==2.0.0
 boto==2.49.0
+boto3==1.34.144
 botocore==1.34.144
 certifi==2024.7.4
 cffi==1.16.0
@@ -76,6 +74,7 @@ MarkupSafe==2.1.5
 mccabe==0.7.0
 more-itertools==10.3.0
 moto==5.0.11
+msgpack==1.0.8
 olefile==0.47
 mypy-extensions==1.0.0
 packaging==24.1
@@ -104,6 +103,7 @@ requests==2.32.3
 responses==0.25.3
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
+ruff==0.5.2
 s3transfer==0.10.2
 service-identity==24.1.0
 setuptools-trial==0.6.0
