Update sphinx from 7.4.3 to 7.4.7/8.0.2

--- a/requirements-cidocs.txt
+++ b/requirements-cidocs.txt
@@ -1,5 +1,6 @@
 Sphinx==7.1.2;  python_version < "3.9" # pyup: ignore
-Sphinx==7.4.3;  python_version >= "3.9"
+Sphinx==7.4.7;  python_version == "3.9" # pyup: ignore
+Sphinx==8.0.2;  python_version >= "3.10"
 sphinx-jinja==2.0.2
 sphinx-rtd-theme==2.0.0
 sphinxcontrib-applehelp==1.0.4;  python_version < "3.9" # pyup: ignore
